2007-02-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/tutorial: This example is a simple simulation of a 
	pan/tilt robot head, with simulated vision, and motor control.

2007-02-22  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/yarp-imageviewer/gCamView.cpp: Reduce verbosity of 
	yarpview program; now it prints messages to the console
	only when things go wrong, now when they are going right.

2007-02-17  Alexandre Bernardino  <alex@isr.ist.utl.pt>

	* conf/FindAce.cmake: Added specific rules for linking with MinGW:
	-lwinmm -lwsock32

2007-02-16  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Terminator.cpp: registered terminator
	sockets in a way that distinguishes them from ports.

	* src/doc/cmd_*.dox: freshened the documentation of the basic
	yarp programs (yarp, yarpdev, yarpview).

2007-02-15  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/NameServer.h: add a new "yarp name
	gc" command.  This does garbage collection for port names.  Every
	port for which "yarp exists /portname" returns false gets removed.
	This will clean up port information registered by processes which
	were interrupted without unregistering those ports.

2007-02-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/port_power, src/doc/port_expert.dox: extend
	tutorial material

	* src/libYARP_OS/include/yarp/Companion.h: added a new
	"yarp wait /portname" command.  Replicates the functionality
	Assif Mirza has been implementing with a bash script.  This
	command waits until "yarp exists /portname" is true.  It is
	currently implemented using polling.

2007-02-13  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/CMakeLists.txt: Conditional for MINGW added
	for Java, based on feedback from Nelson Goncalves.  Not sure
	if it works, but should do no harm and it alerts the user to 
	the issue: passing "--add-stdcall-alias" to the linker.

2007-02-13  Giorgio Metta  <pasa@liralab.it>
